Own subsection for difference equations, minor edits

--- a/discrete_systems/difference_equation.ipynb
+++ b/discrete_systems/difference_equation.ipynb
@@ -17,7 +17,22 @@
    "source": [
     "## Difference Equations\n",
     "\n",
-    "The relation between input $x[k]$ and output $y[k] = \\mathcal{H} \\{ x[k] \\}$ of a discrete system can be described by relating actual and past samples of the input and output signal to each other. When restricting the relation to a linear superposition of these, this results in a [linear difference equation](https://en.wikipedia.org/wiki/Linear_difference_equation). The relation of difference equations to [linear time-invariant (LTI) systems](https://en.wikipedia.org/wiki/LTI_system_theory) is discussed in the following."
+    "The relation between input $x[k]$ and output $y[k] = \\mathcal{H} \\{ x[k] \\}$ of a discrete system can be described by relating actual and past samples of the input and output signal to each other. When restricting the relation to a linear superposition of these, this results in a [linear difference equation](https://en.wikipedia.org/wiki/Linear_difference_equation). The interconnection of difference equations to [linear time-invariant (LTI) systems](https://en.wikipedia.org/wiki/LTI_system_theory) is discussed in the following."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linear Difference Equations with Constant Coefficients\n",
+    "\n",
+    "The relation between the input $x[k] \\in \\mathbb{C}$ with $k \\in \\mathbb{Z}$ and output $y[k] \\in \\mathbb{C}$ of a system in terms of a linear difference equation with constant coefficients $a_n, b_m \\in \\mathbb{C}$ reads\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\sum_{n = 0}^{N} a_n \\; y[k - n] = \\sum_{m = 0}^{M} b_m \\; x[k -m]\n",
+    "\\end{equation}\n",
+    "\n",
+    "with $a_N \\neq 0$. The order of the difference equation is given by $N$. For a unique solution of the difference equation, $N$ initial conditions are required. Under the assumption that the input signal of the system $x[k] = 0$ for $k < 0$ these are given by $y[0], y[-1], \\dots, y[-N + 1]$. Other cases can be handled accordingly."
    ]
   },
   {
@@ -26,13 +41,7 @@
    "source": [
     "### Linear Time-Invariant Systems\n",
     "\n",
-    "The in-/output relation of a system in terms of a linear difference equation with constant coefficients $a_n, b_m \\in \\mathbb{C}$ reads\n",
-    "\n",
-    "\\begin{equation}\n",
-    "\\sum_{n = 0}^{N} a_n \\; y[k - n] = \\sum_{m = 0}^{M} b_m \\; x[k -m]\n",
-    "\\end{equation}\n",
-    "\n",
-    "where the order of the difference equation is given by $N$. LTI systems are an important class of systems. In order to show that linear difference equations with constant coefficients represent LTI systems, the linearity and time-invariance property has to be checked. A system is linear when the superposition principle holds\n",
+    "LTI systems are an important class of systems. In order to show that linear difference equations with constant coefficients represent LTI systems, the linearity and time-invariance property has to be checked. A system is linear when the superposition principle holds\n",
     "\n",
     "\\begin{equation}\n",
     "\\mathcal{H} \\{ A x_1[k] + B x_2[k] \\} = A \\cdot \\mathcal{H} \\{ x_1[k] \\} + B \\cdot \\mathcal{H} \\{ x_2[k] \\}\n",
@@ -44,7 +53,7 @@
     "y[k - \\kappa] = \\mathcal{H} \\{ x[k - \\kappa] \\}\n",
     "\\end{equation}\n",
     "\n",
-    "with $y[k] = \\mathcal{H} \\{ x[k] \\}$ holds for $\\kappa \\in \\mathbb{Z}$. By substitution of $k$ by $k -\\kappa$ in the linear difference equation above it is straightforward to show that the time-invariance is fulfilled."
+    "with $y[k] = \\mathcal{H} \\{ x[k] \\}$ holds for $\\kappa \\in \\mathbb{Z}$. Substituting $k$ by $k -\\kappa$ in above linear difference equation shows that the time-invariance is fulfilled."
    ]
   },
   {
@@ -59,7 +68,7 @@
     "y[k] = \\frac{1}{a_0} \\left( \\sum_{m=0}^{M} b_m \\; x[k-m] - \\sum_{n=1}^{N} a_n \\; y[k-n] \\right)\n",
     "\\end{equation}\n",
     "\n",
-    "for $a_0 \\neq 0$. The output signal is given by a weighted superposition of the actual and past samples of the input signal $x[k]$ and past samples of the output signal $y[k]$. The second sum is known as *recursive* part since it constitutes a feedback of past output samples. The dependency on the input samples (the first sum) is known as *non-recursive* part. For a unique solution of the difference equation, $N$ initial conditions are required. Under the assumption that the input signal of the system $x[k] = 0$ for $k < 0$ these are given by $y[0], y[-1], \\dots, y[-N + 1]$. Other cases can be handled accordingly.\n",
+    "for $a_0 \\neq 0$. The output signal is given by a weighted superposition of the actual and past samples of the input signal $x[k]$ and past samples of the output signal $y[k]$. The second sum is known as *recursive* part since it can be interpreted as a feedback of past output samples. The dependency on the input samples (the first sum) is known as *non-recursive* part.\n",
     "\n",
     "It can be concluded that linear difference equations with constant coefficients represent LTI systems. The coefficients together with the initial conditions characterize an LTI system fully. However, not all LTI systems can be described by linear difference equations of finite order $N$. Idealized systems may result in a linear difference equation of infinite order, for instance."
    ]
@@ -120,10 +129,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import numpy as np\n",
     "from scipy import signal\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "\n",
     "a = 1.0\n",
     "b = [0.0, 0.0, 0.0, 0.0, 1.0]\n",
@@ -146,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(10,4))\n",
+    "plt.figure(figsize=(10, 4))\n",
     "plt.subplot(121)\n",
     "plt.stem(k, x)\n",
     "plt.xlabel('$k$')\n",
@@ -176,10 +185,10 @@
    "source": [
     "#### Moving Average\n",
     "\n",
-    "The [moving average](https://en.wikipedia.org/wiki/Moving_average) of a time-series is frequently used to smooth out short-term fluctuations and to work out longer-term trends. A system which calculates the moving average of its input signal $x[k]$ is represented by\n",
+    "The [moving average](https://en.wikipedia.org/wiki/Moving_average) of a time-series is frequently used to smooth out short-term fluctuations in order to emphasize longer-term trends. A system which calculates the moving average of its input signal $x[k]$ is represented by\n",
     "\n",
     "\\begin{equation}\n",
-    "y[k] = \\frac{1}{N} \\sum_{\\kappa = 0}^{N-1} x[k - \\kappa]\n",
+    "y[k] = \\frac{1}{M} \\sum_{\\kappa = 0}^{M-1} x[k - \\kappa]\n",
     "\\end{equation}\n",
     "\n",
     "The order of the system is $N=0$. The coefficients of the linear difference equation read\n",
@@ -187,7 +196,7 @@
     "\\begin{align}\n",
     "a_0 &= 1 \\\\\n",
     "b_m &= \\begin{cases}\n",
-    "\\frac{1}{N} & \\text{for } 0 \\leq m < N \\\\\n",
+    "\\frac{1}{M} & \\text{for } 0 \\leq m < M \\\\\n",
     "0 & \\text{otherwise}\n",
     "\\end{cases}\n",
     "\\end{align}\n",
@@ -203,15 +212,15 @@
    "source": [
     "np.random.seed(seed=0)\n",
     "\n",
-    "N = 10\n",
+    "M = 10\n",
     "a = [1.0]\n",
-    "b = 1/N * np.ones(N)\n",
+    "b = 1/M * np.ones(M)\n",
     "\n",
     "k = np.arange(0, 60)\n",
     "x = np.cos(2*np.pi/30 * k) + .2 * np.random.normal(size=(len(k)))\n",
     "y = signal.lfilter(b, a, x)\n",
     "\n",
-    "plt.figure(figsize=(10,4))\n",
+    "plt.figure(figsize=(10, 4))\n",
     "plt.subplot(121)\n",
     "plt.stem(k, x)\n",
     "plt.xlabel('$k$')\n",
@@ -232,7 +241,7 @@
    "source": [
     "**Exercise**\n",
     "\n",
-    "* Change the length `N` of the moving average. How does the output of the system change?"
+    "* Change the length `M` of the moving average. How does the output of the system change?"
    ]
   },
   {
@@ -247,7 +256,7 @@
     "y[k] - y[k-1] + \\frac{1}{2} y[k-2] = x[k]\n",
     "\\end{equation}\n",
     "\n",
-    "The order of the system is $N=2$. The coefficients of the system can be derived from its difference equation as $a_0 = 1$, $a_1 = -1$, $a_2 = \\frac{1}{2}$ and $b_0 = 1$. The output signal for a rectangular signal $\\text{rect}_{20}[k]$ at the input $x[k]$ is computed and plotted for zero initial conditions."
+    "The order of the system is $N=2$. The coefficients of the system can be derived from its difference equation as $a_0 = 1$, $a_1 = -1$, $a_2 = \\frac{1}{2}$ and $b_0 = 1$. The output signal for a rectangular signal at the input $x[k] = \\text{rect}_{20}[k]$ is computed and plotted for zero initial conditions."
    ]
   },
   {
@@ -257,7 +266,8 @@
    "outputs": [],
    "source": [
     "def rect(k, N):\n",
-    "    return np.where((k>=0) & (k<N), 1.0, 0.0)\n",
+    "    return np.where((k >= 0) & (k < N), 1.0, 0.0)\n",
+    "\n",
     "\n",
     "a = [1.0, -1.0, 1/2]\n",
     "b = [1.0]\n",
@@ -266,7 +276,7 @@
     "x = rect(k, 20)\n",
     "y = signal.lfilter(b, a, x)\n",
     "\n",
-    "plt.figure(figsize=(10,4))\n",
+    "plt.figure(figsize=(10, 4))\n",
     "plt.subplot(121)\n",
     "plt.stem(k, x)\n",
     "plt.xlabel('$k$')\n",
