--- a/discrete_systems/impulse_response.ipynb
+++ b/discrete_systems/impulse_response.ipynb
@@ -52,7 +52,7 @@
     "h[k] = \\mathcal{H} \\left\\{ \\delta[k] \\right\\}\n",
     "\\end{equation}\n",
     "\n",
-    "If the system is time-invariant, the response to a shifted Diract impulse is $\\mathcal{H} \\left\\{ \\delta[k-\\kappa]) \\right\\} = h[k-\\kappa]$. Hence, for a discrete LTI system we finally get\n",
+    "If the system is time-invariant, the response to a shifted Dirac impulse is $\\mathcal{H} \\left\\{ \\delta[k-\\kappa]) \\right\\} = h[k-\\kappa]$. Hence, for a discrete LTI system we finally get\n",
     "\n",
     "\\begin{equation}\n",
     "y[k] = \\sum_{\\kappa = -\\infty}^{\\infty} x[\\kappa] \\cdot h[k-\\kappa] = y[k] = x[k] * h[k]\n",
@@ -80,13 +80,13 @@
    "source": [
     "### Finite Impulse Response\n",
     "\n",
-    "Let's consider the case of a [non-recursive system](difference_equation.ipynb#Recursive-and-Non-Recursive-Systems) with $a_n = 0$ for $n > 0$. Without loss of generality it can be assumed that $a_0 = 1$, since $\\frac{1}{a_0}$ can be incorporated into the other coefficients. The impulse response is given as\n",
+    "Let's consider the case of a [non-recursive system](difference_equation.ipynb#Recursive-and-Non-Recursive-Systems) with $a_n = 0$ for $n > 0$. Without loss of generality it can be assumed that $a_0 = 1$, since $\\frac{1}{a_0}$ can be incorporated into the other coefficients by dividing them through $a_0$. The impulse response is given as\n",
     "\n",
     "\\begin{equation}\n",
     "h[k] = \\sum_{m=0}^{M} b_m \\; \\delta[k-m] = \\begin{cases} b_k & \\text{for } 0 \\leq k < M \\\\ 0 & \\text{otherwise} \\end{cases}\n",
     "\\end{equation}\n",
     "\n",
-    "The impulse response of a non-recursive system is of finite length $M$. Its values are given by the coefficients $b_m$ of the system. An impulse response of finite length is commonly termed [finite impulse response (FIR)](https://en.wikipedia.org/wiki/Finite_impulse_response). The term FIR (system) is used synonymously to non-recursive system. The former relates to the length of the impulse response and the latter to the structure of the system. Note that the summation in above formula constitutes a convolution."
+    "Note that the summation in above formula constitutes a convolution between the signal given by the samples $b_m$ and the Dirac impulse $\\delta[k]$. The impulse response of a non-recursive system is of finite length $M$. Its values are given by the coefficients $b_m$ of the linear difference equation characterizing the system. An impulse response of finite length is commonly termed [finite impulse response (FIR)](https://en.wikipedia.org/wiki/Finite_impulse_response). The term FIR (system) is used synonymously to non-recursive system. The former relates to the length of the impulse response and the latter to the structure of the system."
    ]
   },
   {
@@ -95,13 +95,13 @@
    "source": [
     "**Example**\n",
     "\n",
-    "According to above result, the impulse response of the [moving average filter](difference_equation.ipynb#Moving-Average) is given as\n",
+    "According to above findings, the impulse response of the [moving average filter](difference_equation.ipynb#Moving-Average) is given as\n",
     "\n",
     "\\begin{equation}\n",
     "h[k] = \\frac{1}{N} \\cdot \\text{rect}_N[k]\n",
     "\\end{equation}\n",
     "\n",
-    "As alternative to the [solution of the difference equation illustrated before](difference_equation.ipynb#Moving-Average), the output signal $y[k] = \\mathcal{H} \\{ y[k] \\}$ is computed by convolution for the same input signal."
+    "As alternative to the [solution of the difference equation illustrated before](difference_equation.ipynb#Moving-Average), the output signal $y[k] = \\mathcal{H} \\{ y[k] \\}$ is computed by convolution of the (same) input signal."
    ]
   },
   {
@@ -110,13 +110,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import numpy as np\n",
     "from scipy import signal\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
     "\n",
     "def rect(k, N):\n",
-    "    return np.where((k>=0) & (k<N), 1.0, 0.0)\n",
+    "    return np.where((k >= 0) & (k < N), 1.0, 0.0)\n",
+    "\n",
     "\n",
     "np.random.seed(seed=0)\n",
     "\n",
@@ -127,7 +129,7 @@
     "x = np.cos(2*np.pi/30 * k) + .2 * np.random.normal(size=(len(k)))\n",
     "y = np.convolve(x, h)\n",
     "\n",
-    "plt.figure(figsize=(10,4))\n",
+    "plt.figure(figsize=(10, 4))\n",
     "plt.subplot(121)\n",
     "plt.stem(k, x)\n",
     "plt.xlabel('$k$')\n",
@@ -157,7 +159,7 @@
    "source": [
     "### Infinite Impulse Response\n",
     "\n",
-    "Now the general case of a [recursive system](difference_equation.ipynb#Recursive-and-Non-Recursive-Systems) is regarded. By inspection of above formula for the computation of the impulse response from the coefficients of a linear difference equation it becomes clear that the impulse response $h[k]$ for time-instant $k$ depends on the impulse response of past time instants $(k-1) \\dots (k-N+1)$. This feedback generally results in an impulse response of infinite length. Such an impulse response is commonly termed as [infinite impulse response (IIR)](https://en.wikipedia.org/wiki/Infinite_impulse_response). The term IIR (system) is used synonymously to recursive system. The former relates to the length of the impulse response and the latter to the structure of the system.\n",
+    "Now the general case of a [recursive system](difference_equation.ipynb#Recursive-and-Non-Recursive-Systems) is regarded. By inspection of above formula for the computation of the impulse response from the coefficients of a linear difference equation it becomes clear that the impulse response $h[k]$ for time-instant $k$ depends on the impulse response of past time instants $k-1, \\dots, k-N+1$. This feedback generally results in an impulse response of infinite length. Such an impulse response is commonly termed as [infinite impulse response (IIR)](https://en.wikipedia.org/wiki/Infinite_impulse_response). The term IIR (system) is used synonymously to recursive system. The former relates to the length of the impulse response and the latter to the structure of the system.\n",
     "\n",
     "For a finite-length input signal $x[k]$ the output signal of a recursive system cannot be computed by a linear convolution $y[k] = x[k] * h[k]$ in practice. This is due to the infinite length of its impulse response. As practical solution, the impulse response is often truncated to a finite length after its has decayed reasonably."
    ]
@@ -184,7 +186,8 @@
    "outputs": [],
    "source": [
     "def dirac(k):\n",
-    "    return np.where(k==0, 1.0, 0.0)\n",
+    "    return np.where(k == 0, 1.0, 0.0)\n",
+    "\n",
     "\n",
     "a = [1.0, -1.0, 1/2]\n",
     "b = [1.0]\n",
@@ -193,18 +196,18 @@
     "x = dirac(k)\n",
     "h = signal.lfilter(b, a, x)\n",
     "\n",
-    "plt.figure(figsize=(6,3))\n",
+    "plt.figure(figsize=(6, 3))\n",
     "plt.stem(k, h)\n",
     "plt.xlabel('$k$')\n",
-    "plt.ylabel(r'$h[k]$');\n",
-    "plt.axis([0, 20, -.5, 1.2]);"
+    "plt.ylabel(r'$h[k]$')\n",
+    "plt.axis([0, 20, -.5, 1.2])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to illustrate the decay of the impulse response, its magnitude $A[k]$ is plotted in [decibel (dB)](https://en.wikipedia.org/wiki/Decibel)\n",
+    "In order to illustrate the amplitude decay of the impulse response over a wider range, its magnitude $A[k]$ is plotted in [decibel (dB)](https://en.wikipedia.org/wiki/Decibel)\n",
     "\n",
     "\\begin{equation}\n",
     "A[k] = 20 \\cdot \\log_{10} ( |h[k]| ) \\quad \\text{in dB}\n",
@@ -220,12 +223,12 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore', 'divide by zero encountered in log10')\n",
     "\n",
-    "plt.figure(figsize=(10,4))\n",
+    "plt.figure(figsize=(10, 4))\n",
     "plt.stem(k, 20*np.log10(np.abs(h)))\n",
     "plt.xlabel('$k$')\n",
     "plt.ylabel(r'$|h[k]|$ in dB')\n",
     "plt.axis([0, k[-1], -800, 0])\n",
-    "plt.grid();"
+    "plt.grid()"
    ]
   },
   {
@@ -242,16 +245,17 @@
    "outputs": [],
    "source": [
     "def rect(k, N):\n",
-    "    return np.where((k>=0) & (k<N), 1.0, 0.0)\n",
+    "    return np.where((k >= 0) & (k < N), 1.0, 0.0)\n",
+    "\n",
     "\n",
     "x = rect(k, 20)\n",
     "y_ir = np.convolve(h, x)\n",
     "\n",
-    "plt.figure(figsize=(6,3))\n",
+    "plt.figure(figsize=(6, 3))\n",
     "plt.stem(k, y_ir[:len(k)])\n",
     "plt.xlabel('$k$')\n",
     "plt.ylabel(r'$y[k]$')\n",
-    "plt.axis([0, 40, -.7, 2.6]);"
+    "plt.axis([0, 40, -.7, 2.6])"
    ]
   },
   {
