Fixed x-axis of plot in example

--- a/discrete_systems/impulse_response.ipynb
+++ b/discrete_systems/impulse_response.ipynb
@@ -192,7 +192,7 @@
     "a = [1.0, -1.0, 1/2]\n",
     "b = [1.0]\n",
     "\n",
-    "k = np.arange(0, 256)\n",
+    "k = np.arange(256)\n",
     "x = dirac(k)\n",
     "h = signal.lfilter(b, a, x)\n",
     "\n",
@@ -200,7 +200,7 @@
     "plt.stem(k, h)\n",
     "plt.xlabel('$k$')\n",
     "plt.ylabel(r'$h[k]$')\n",
-    "plt.axis([0, 20, -.5, 1.2])"
+    "plt.axis([0, 25, -.5, 1.2])"
    ]
   },
   {
