Fixed integer labels of stem-plot

--- a/discrete_systems/linear_convolution.ipynb
+++ b/discrete_systems/linear_convolution.ipynb
@@ -270,7 +270,8 @@
     "plt.stem(x)\n",
     "plt.xlabel('$k$')\n",
     "plt.ylabel('$x[k]$')\n",
-    "plt.ylim([0, N+.5]);"
+    "plt.ylim([0, N+.5])\n",
+    "plt.xlim([-5, 25])"
    ]
   },
   {
