--- a/systems_time_domain/convolution.ipynb
+++ b/systems_time_domain/convolution.ipynb
@@ -102,7 +102,7 @@
    "source": [
     "**Example**\n",
     "\n",
-    "The convolution $y(t) = x(t) * h(t)$ is graphically illustrated using the particular signals\n",
+    "The convolution $y(t) = x(t) * h(t)$ is illustrated using the particular signals\n",
     "\n",
     "\\begin{align}\n",
     "h(t) &= e^{-t} \\\\\n",
@@ -232,7 +232,7 @@
     "\n",
     "1. no overlap for $t<0$,\n",
     "2. partial overlap for $0 \\leq t < 1$, and\n",
-    "3. full overlap for $t > 0$ (note that the chosen impulse response decays asymptotically)."
+    "3. full overlap for $t > 1$ (note that the chosen impulse response decays asymptotically)."
    ]
   },
   {
@@ -320,7 +320,7 @@
    "outputs": [],
    "source": [
     "y = sym.integrate(h.subs(t,t-tau) * x.subs(t, tau), (tau, 0, t))\n",
-    "sym.plot(y, (t,0,6), ylabel=r'$y(t)$', line_color='g');"
+    "sym.plot(y, (t,0,6), ylabel=r'$y(t)$', line_color='C2');"
    ]
   },
   {
