Changed order of z-transform and discrete-time Fourier transform, fixed example, common plotting style, minor edits

--- a/z_transform/definition.ipynb
+++ b/z_transform/definition.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## Definition\n",
     "\n",
-    "The [$z$-transform](https://en.wikipedia.org/wiki/Z-transform), as the [discrete-time Fourier transform](../discrete_time_fourier_transform/definition.ipynb) (DTFT), is a transform which represents a discrete signal $x[k]$ in the spectral domain. Unlike the DTFT which uses the harmonic complex exponential function $e^{-j \\Omega k}$ with $\\Omega \\in \\mathbb{R}$ as kernel, the $z$-transformation bases on the complex exponential function $z^{-k}$ with $z \\in \\mathbb{C}$ as kernel."
+    "The [$z$-transform](https://en.wikipedia.org/wiki/Z-transform) is a transform which represents a discrete signal $x[k]$ in the spectral domain. It bases on the complex exponential function $z^{-k}$ with $z \\in \\mathbb{C}$ as kernel."
    ]
   },
   {
@@ -55,7 +55,7 @@
     "X(z) = \\sum_{k = 0}^{\\infty} x[k] \\, z^{-k}\n",
     "\\end{equation}\n",
     "\n",
-    "In the literature both the one- and two-sided $z$-transform are termed as $z$-transform. For causal signals both give the same result. The one-sided $z$-transform is also useful for the solution of initial value problems, for instance as defined by [linear difference equations with constant coefficients](../discrete_systems/difference_equation.ipynb) where the initial values are given for $k=0$."
+    "In the literature both the one- and two-sided $z$-transform are termed as $z$-transform. For causal signals both give the same result. The one-sided $z$-transform is also useful for the solution of initial value problems, for instance as defined by [linear difference equations with constant coefficients](../discrete_systems/difference_equation.ipynb) where the initial values are e.g. defined for $k \\leq 0$."
    ]
   },
   {
@@ -73,7 +73,7 @@
     "The transform of a generic finite-length signal is given as a polynomial in $z$. Depending on the particular limits $M_1$ and $M_2$, the polynomial may contain powers of $z$ and $z^{-1}$. For a causal finite-length signal, above result specializes to the case $M_1 = 0$ and $M_2 > 0$ as\n",
     "\n",
     "\\begin{equation}\n",
-    "X(z) = x[0] + x[1] \\, z^{-1} + \\dots + x[M_2] \\, z^{- M_2}\n",
+    "X(z) = x[0] + x[1] \\, z^{-1} + \\dots + x[M_2 - 1] \\, z^{- (M_2-1)}\n",
     "\\end{equation}\n",
     "\n",
     "The transform of a causal finite-length signal is given as a polynomial in $z^{-1}$. The ROC for this case is given as $z \\in \\mathbb{C} \\setminus \\{ 0 \\}$. Similar considerations yield the $z$-transform and ROC of an anticausal signal. The ROCs for a generic finite-length signal can be summarized as\n",
@@ -121,7 +121,7 @@
     "\n",
     "for $z \\in \\mathbb{C}$. The ROC covers the entire complex plane.\n",
     "\n",
-    "The transform of the Dirac impulse is equal to one. Hence, all complex frequencies $z$ are present with equal weight. This is an important property in the theory of discrete signals and systems, since the Dirac impulse is used to characterize linear time-invariant (LTI) systems by their [impulse response](../discrete_systems/impulse_response.ipynb) $h[k] = \\mathcal{H} \\{ \\delta[k] \\}$."
+    "The transform of the Dirac impulse is equal to one. Hence, all complex frequencies $z$ are present with equal weight. Since the Dirac impulse is used to characterize linear time-invariant (LTI) systems by their [impulse response](../discrete_systems/impulse_response.ipynb) $h[k] = \\mathcal{H} \\{ \\delta[k] \\}$, this constitutes an important property in the theory of discrete signals and systems, ."
    ]
   },
   {
@@ -139,9 +139,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import sympy as sym\n",
     "sym.init_printing()\n",
+    "%matplotlib inline\n",
     "\n",
     "k = sym.symbols('k', integer=True)\n",
     "z = sym.symbols('z', complex=True)\n",
@@ -232,7 +232,7 @@
     "\\sum_{k = -\\infty}^{\\infty} | x[k] \\cdot z^{- k} | = \\sum_{k = -\\infty}^{\\infty} | x[k] | \\cdot | z |^{- k}  < \\infty\n",
     "\\end{equation}\n",
     "\n",
-    "It can be concluded from this result that the ROC is determined solely by the magnitude $|z|$ of the complex frequency. It follows further that the ROC is given as a ring in the $z$-plane which may include $z=0$ and/or $z=\\infty$. The phase $\\Omega$ of the complex frequency $z$ has no effect in terms of convergence, as $|z| = e^{\\Sigma} \\cdot e^{j \\Omega}$.\n",
+    "It can be concluded from this result that the ROC is determined solely by the magnitude $|z|$ of the complex frequency. It follows further that the ROC is given as a ring in the $z$-plane which may include $z=0$ and/or $z=\\infty$. The phase $\\Omega$ of the complex frequency $z$ has no effect in terms of convergence, as $z = e^{\\Sigma} \\cdot e^{j \\Omega}$.\n",
     "\n",
     "For a right-sided signal of infinite length with $x[k] = 0$ for $k < M$, the ROC is given in the form of $|z| > a$ with $a \\in \\mathbb{R}^+$. This can be concluded from the decay of the term $| z |^{- k}$ for $k \\to \\infty$, which ensures convergence for a given $a$. However this holds only for signals $x[k]$ with [exponential growth](https://en.wikipedia.org/wiki/Exponential_growth). Please refer to the $z$-transform of the causal exponential signal derived above. \n",
     "\n",
@@ -278,46 +278,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Relation to the Discrete-Time Fourier-Transform\n",
-    "\n",
-    "The two-sided $z$-transform $X(z) = \\mathcal{z} \\{ x[k] \\}$ of a signal $x[k]$ can be related to its [discrete-time Fourier transform](../discrete_time_fourier_transform/definition.ipynb) (DTFT) $X(e^{j \\Omega}) = \\mathcal{F}_* \\{ x[k] \\}$ by inspecting the kernels of both transforms. The $z$-transform has the complex exponential function $z^{-k}$ with $z \\in \\mathbb{C}$ as kernel. The DTFT has the harmonic exponential function $e^{- j \\Omega k}$ with $\\Omega \\in \\mathbb{R}$ as kernel. Both can be related to each other by considering that $z = e^{\\Sigma + j \\Omega}$. Hence, if the ROC includes the unit circle $|z| = 1$ of the $z$-plane, the DTFT of a signal $x[k]$ can be derived from its $z$-transform by\n",
-    "\n",
-    "\\begin{equation}\n",
-    "\\mathcal{F}_* \\{ x[k] \\} = \\mathcal{Z} \\{ x[k] \\} \\bigr\\rvert_{z = e^{j \\Omega}}\n",
-    "\\end{equation}\n",
-    "\n",
-    "If the ROC does not include the unit circle, the DTFT of a given signal does not exist. A benefit of the $z$-transform over the DTFT is that it can be applied to a wider class of signals."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Example**\n",
-    "\n",
-    "The DTFT $X(e^{j \\Omega}) = \\mathcal{F}_* \\{ x[k] \\}$ of the causal exponential signal\n",
-    "\n",
-    "\\begin{equation}\n",
-    "x[k] = \\epsilon[k] \\cdot e^{- \\Sigma_0 k} \n",
-    "\\end{equation}\n",
-    "\n",
-    "for $\\Sigma_0 \\in \\mathbb{R}^+$ is derived from the $z$-transform of the [causal complex exponential signal](#Transformation-of-the-Causal-Complex-Exponential-Signal). Using the substituting $z_0 = e^{-\\Sigma_0}$ yields\n",
-    "\n",
-    "\\begin{equation}\n",
-    "X(z) = \\frac{z}{z - e^{-\\Sigma_0}}\n",
-    "\\end{equation}\n",
-    "\n",
-    "with the ROC $|z| > e^{-\\Sigma_0}$. The ROC includes the unit circle for $0 < \\Sigma_0 < \\infty$. The DTFT can be derived from the $z$-transform by substituting $z$ with $e^{j \\Omega}$ as\n",
-    "\n",
-    "\\begin{equation}\n",
-    "X(e^{j \\Omega}) = \\frac{e^{j \\Omega}}{e^{j \\Omega} - e^{-\\Sigma_0}}\n",
-    "\\end{equation}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Representation\n",
     "\n",
     "The $z$-transform $X(z) = \\mathcal{Z} \\{ x[k] \\}$ depends on the complex frequency $z \\in \\mathbb{C}$ and is in general complex valued $X(z) \\in \\mathbb{C}$. It can be illustrated by plotting its magnitude $|X(z)|$ and phase $\\varphi(z)$ or real $\\Re \\{ X(z) \\}$ and imaginary $\\Im \\{ X(z) \\}$ part in the complex $z$-plane. The resulting three-dimensional plots are often not very illustrative.\n",
@@ -346,7 +306,7 @@
    "source": [
     "**Exercise**\n",
     "\n",
-    "* Derive $X(z)$ together with its ROC from above pole-zero plot under the assumption that it represents a right-handed signal $x[k]$."
+    "* Derive $X(z)$ together with its ROC from above pole-zero plot under the assumption that it represents a right-sided signal $x[k]$."
    ]
   },
   {
