--- a/z_transform/theorems.ipynb
+++ b/z_transform/theorems.ipynb
@@ -81,9 +81,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import sympy as sym\n",
     "from pole_zero_plot import pole_zero_plot\n",
+    "%matplotlib inline\n",
     "sym.init_printing()\n",
     "\n",
     "N = 5\n",
@@ -211,10 +211,13 @@
    "source": [
     "**Example**\n",
     "\n",
-    "The $z$-transform of an harmonic exponential signal $e^{j \\Omega_0 k}$ of finite duration $N$ is derived the following. The signal can be expressed as $e^{j \\Omega_0 k} \\cdot \\text{rect}_N[k]$ which allows to apply the modulation theorem with $z_0 = e^{j \\Omega_0}$. This yields\n",
+    "The $z$-transform of an harmonic exponential signal $e^{j \\Omega_0 k}$ of finite duration $N$ is derived the following. The signal can be expressed as $e^{j \\Omega_0 k} \\cdot \\text{rect}_N[k]$ which allows to apply the modulation theorem with $z_0 = e^{j \\Omega_0}$. Together with the [z-Transform of the rectangular signal](definition.ipynb#Transformation-of-the-Rectangular-Signal) this yields\n",
     "\n",
     "\\begin{equation}\n",
-    "\\mathcal{Z} \\{ e^{j \\Omega_0 k} \\cdot \\text{rect}_N[k] \\} = \\sum_{k=0}^{N-1} \\left( \\frac{z}{e^{j \\Omega_0}} \\right)^{-k} = e^{j \\Omega_0 k} z^{-k}\n",
+    "\\mathcal{Z} \\{ e^{j \\Omega_0 k} \\cdot \\text{rect}_N[k] \\} = \\begin{cases}\n",
+    "\\frac{1 - \\left( \\frac{z}{e^{j \\Omega_0}} \\right)^{-N}}{1 - \\left( \\frac{z}{e^{j \\Omega_0}} \\right)^{-1}} & \\text{for } z \\neq e^{j \\Omega_0} \\\\\n",
+    "N & \\text{for } z = e^{j \\Omega_0}\n",
+    "\\end{cases}\n",
     "\\end{equation}\n",
     "\n",
     "for $z \\in \\mathbb{C} \\setminus \\{ 0 \\}$."
@@ -323,9 +326,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
