--- a/discrete_time_fourier_transform/theorems.ipynb
+++ b/discrete_time_fourier_transform/theorems.ipynb
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Transformation of the triangular signal\n",
+    "#### Transformation of the trapezoidal and triangular signal\n",
     "\n",
     "The linear convolution of two [rectangular signals](../discrete_signals/standard_signals.ipynb#Rectangular-Signal) of lengths $N$ and $M$ defines a [signal of trapezoidal shape](../discrete_systems/linear_convolution.ipynb#Finite-Length-Signals)\n",
     "\n",
@@ -85,7 +85,7 @@
     "e^{-j \\Omega (N-1)} \\cdot \\frac{\\sin^2(\\frac{N \\Omega}{2}) }{\\sin^2 ( \\frac{\\Omega}{2} )}\n",
     "\\end{equation}\n",
     "\n",
-    "Both the signal and the magnitude of its DTFT are plotted for illustration"
+    "Both the triangular signal and the magnitude of its DTFT are plotted for illustration"
    ]
   },
   {
@@ -94,10 +94,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import sympy as sym\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "\n",
     "N = 7\n",
     "\n",
@@ -107,8 +107,9 @@
     "plt.ylabel('$x[k]$')\n",
     "\n",
     "W = sym.symbols('Omega')\n",
-    "X = sym.exp(-sym.I*W *(N-1)) * sym.sin(N*W/2)**2 / sym.sin(W/2)**2\n",
-    "sym.plot(sym.Abs(X), (W, -5, 5), xlabel='$\\Omega$', ylabel='$|X(e^{j \\Omega})|$');"
+    "X = sym.exp(-sym.I*W * (N-1)) * sym.sin(N*W/2)**2 / sym.sin(W/2)**2\n",
+    "sym.plot(sym.Abs(X), (W, -5, 5), xlabel='$\\Omega$',\n",
+    "         ylabel='$|X(e^{j \\Omega})|$')"
    ]
   },
   {
@@ -243,7 +244,7 @@
     "\n",
     "plt.stem(k, x)\n",
     "plt.xlabel('$k$')\n",
-    "plt.ylabel('$y[k]$');"
+    "plt.ylabel('$y[k]$')"
    ]
   },
   {
@@ -254,10 +255,11 @@
    "source": [
     "W = sym.symbols('Omega')\n",
     "\n",
-    "Y = 1/2 * ((sym.exp(-sym.I*(W+W0)*(N-1)/2) * sym.sin(N*(W+W0)/2) / sym.sin((W+W0)/2)) + \n",
+    "Y = 1/2 * ((sym.exp(-sym.I*(W+W0)*(N-1)/2) * sym.sin(N*(W+W0)/2) / sym.sin((W+W0)/2)) +\n",
     "           (sym.exp(-sym.I*(W-W0)*(N-1)/2) * sym.sin(N*(W-W0)/2) / sym.sin((W-W0)/2)))\n",
     "\n",
-    "sym.plot(sym.Abs(Y), (W, -sym.pi, sym.pi), xlabel='$\\Omega$', ylabel='$|Y(e^{j \\Omega})|$');"
+    "sym.plot(sym.Abs(Y), (W, -sym.pi, sym.pi),\n",
+    "         xlabel='$\\Omega$', ylabel='$|Y(e^{j \\Omega})|$')"
    ]
   },
   {
@@ -295,7 +297,8 @@
    "source": [
     "**Example**\n",
     "\n",
-    "An example for the application of the modulation theorem is the [downsampling/decimation](https://en.wikipedia.org/wiki/Decimation_(signal_processing) of a discrete signal $x[k]$. Downsampling refers to lowering the sampling rate of a signal. The example focuses on the special case of removing every second sample, hence halving the sampling rate. The downsampling is modeled by defining a signal $x_\\frac{1}{2}[k]$ where every second sample is set to zero\n",
+    "An example for the application of the modulation theorem is the \n",
+    "[downsampling/decimation](https://en.wikipedia.org/wiki/Decimation_(signal_processing)) of a discrete signal $x[k]$. Downsampling refers to lowering the sampling rate of a signal. The example focuses on the special case of removing every second sample, hence halving the sampling rate. The downsampling is modeled by defining a signal $x_\\frac{1}{2}[k]$ where every second sample is set to zero\n",
     "\n",
     "\\begin{equation}\n",
     "x_\\frac{1}{2}[k] = \\begin{cases} \n",
@@ -390,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
