--- a/discrete_time_fourier_transform/definition.ipynb
+++ b/discrete_time_fourier_transform/definition.ipynb
@@ -171,6 +171,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Relation to the z-Transform\n",
+    "\n",
+    "The DTFT $X(e^{j \\Omega}) = \\mathcal{F}_* \\{ x[k] \\}$ of a signal $x[k]$ can be related to its [two-sided $z$-transform](../z_transform/definition.ipynb#Two-Sided-$z$-Transform) $X(z) = \\mathcal{Z} \\{ x[k] \\}$ by inspecting the kernels of both transforms. The $z$-transform has the complex exponential function $z^{-k}$ with $z \\in \\mathbb{C}$ as kernel. The DTFT has the harmonic exponential function $e^{- j \\Omega k}$ with $\\Omega \\in \\mathbb{R}$ as kernel. Both can be related to each other by considering that $z = e^{\\Sigma + j \\Omega}$. Hence, if the ROC includes the unit circle $|z| = 1$ of the $z$-plane, the DTFT of a signal $x[k]$ can be derived from its $z$-transform by\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\mathcal{F}_* \\{ x[k] \\} = \\mathcal{Z} \\{ x[k] \\} \\bigr\\rvert_{z = e^{j \\Omega}}\n",
+    "\\end{equation}\n",
+    "\n",
+    "If the ROC does not include the unit circle, the DTFT of a given signal does not exist. A benefit of the $z$-transform over the DTFT is that it can be applied to a wider class of signals."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Example**\n",
+    "\n",
+    "The DTFT $X(e^{j \\Omega}) = \\mathcal{F}_* \\{ x[k] \\}$ of the causal exponential signal\n",
+    "\n",
+    "\\begin{equation}\n",
+    "x[k] = \\epsilon[k] \\cdot e^{- \\Sigma_0 k} \n",
+    "\\end{equation}\n",
+    "\n",
+    "for $\\Sigma_0 \\in \\mathbb{R}^+$ is derived from the $z$-transform of the [causal complex exponential signal](#Transformation-of-the-Causal-Complex-Exponential-Signal). Using the substituting $z_0 = e^{-\\Sigma_0}$ yields\n",
+    "\n",
+    "\\begin{equation}\n",
+    "X(z) = \\frac{z}{z - e^{-\\Sigma_0}}\n",
+    "\\end{equation}\n",
+    "\n",
+    "with the ROC $|z| > e^{-\\Sigma_0}$. The ROC includes the unit circle for $0 < \\Sigma_0 < \\infty$. The DTFT can be derived from the $z$-transform by substituting $z$ with $e^{j \\Omega}$ as\n",
+    "\n",
+    "\\begin{equation}\n",
+    "X(e^{j \\Omega}) = \\frac{e^{j \\Omega}}{e^{j \\Omega} - e^{-\\Sigma_0}}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Link to Fourier Transform of a Sampled Signal\n",
     "\n",
     "The link between the Fourier transform of a sampled signal $x_\\text{s}(t)$ and the DTFT of its discrete counterpart $x[k] = x(k T)$ is established in the following. Under the assumption of [ideal sampling](../sampling/ideal.ipynb#Model-of-Ideal-Sampling), the sampled signal reads\n",
@@ -200,7 +240,7 @@
    "source": [
     "### Interpretation of the Spectrum\n",
     "\n",
-    "It can be concluded from the definition of the inverse DTFT that a discrete signal $x[k]$ can be represented as a superposition of weighted harmonic exponential signals $X(e^{j \\Omega}) \\cdot e^{j \\Omega k}$ for $-\\pi < \\Omega < \\pi$. In general the spectrum $X(e^{j \\Omega})$ will also have contributions for negative normalized angular frequencies $-\\pi < \\Omega < 0$. The concept of [negative frequencies](https://en.wikipedia.org/wiki/Negative_frequency) has no physical meaning. However, in the context of the DTFT with its complex kernel $e^{j \\Omega k}$ negative frequencies are required to express complex and real-valued signals.\n",
+    "It can be concluded from the definition of the inverse DTFT that a discrete signal $x[k]$ can be represented as a superposition of weighted harmonic exponential signals $X(e^{j \\Omega}) \\cdot e^{j \\Omega k}$ for $-\\pi < \\Omega < \\pi$. In general, the spectrum $X(e^{j \\Omega})$ will also have contributions for negative normalized angular frequencies $-\\pi < \\Omega < 0$. The concept of [negative frequencies](https://en.wikipedia.org/wiki/Negative_frequency) has no physical meaning. However, in the context of the DTFT with its complex kernel $e^{j \\Omega k}$ negative frequencies are required to express complex and real-valued signals.\n",
     "\n",
     "The DTFT of a discrete signal $x[k] \\in \\mathbb{C}$ is in general complex valued, $X(e^{j \\Omega}) \\in \\mathbb{C}$. It is commonly represented by its real and imaginary part \n",
     "\n",
@@ -252,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
